0.94.0  UNRELEASED

 BUG FIXES
 
  * Catch UnsupportedProtocol exception in the Nautilus extension. (#77965)
  
  * Make Nautilus extension work again. (#111826, Toshio Kuratomi)
  
  * Make viz not throw errors when there are 0 commits. (#173698, Gary van der
    Merwe)

 INTERNALS

  * Refactored the revisionview. (Daniel Schierbeck)

0.93.0  2007-12-10

 UI

  * Added a menu bar to the viz. (Daniel Schierbeck)
     - Select a revision by tag.
     - Show/hide tree view columns.

 BUG FIXES

  * Make toolbars in Olive follow GNOME standards. (#137074)

 INTERNALS

  * Allow test suite to run without PyGTK. (Aaron Bentley)

0.92.1  2007-11-10

 BUG FIXES
 
  * Fixed logview bug in gannotate. (Daniel Schierbeck)

0.92.0	2007-11-07

 UI

  * Removed email part of committer id from committer column in the revision
    history window. (Daniel Schierbeck)
    
  * Removed date column from revision history window. (Daniel Schierbeck)
  
  * Rearranged the logview into a notebook. (Daniel Schierbeck)
  
  * Redesigned the Commit dialog. (John Arbash Meinel)
  
  * Broken lines support made optional. (Daniel Schierbeck)

 FEATURES
 
  * Rewrite of a large ammount of the viz code:
        * Make use of the bzrlib.tsort.merge_sort for sorting the revisions.
        * A new algorithm to work out how to draw the lines using the
          revsion numbers returned from merge_sort.
        * Lines that are very long are broken, which results in the graph
          requiring less space to render and the graph is easier to interpret.
          (#82907)
        * Choose the color for a branch from the revsion number, which results
          in stable colors. Revisions on the mainline are allways black.
        * Implement a TreeModel that loads the revision data only when a a
          revision is scrolled into view, improving the time it takes to display
          the first screen of data by 92%. (#124143)
        * Add a column to display the revision number. (#64167)